# SnakeGame

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: Config.h  Food.h  Game.h  Map.h  Object.h  Snake.h  Texture.h
sources/: Food.cpp  Game.cpp  Map.cpp  Object.cpp  Snake.cpp  Texture.cpp
